# ASMRPlayer

./: .gitignore  AGENTS.md  LICENSE  README.md  gradle.properties  settings.gradle.kts
DOCS/: Feature-Design.md  README.md  TODOList.md  UI-Design.md
DOCS/tech/: refactor-hotspots.md  remote-asr-progress-contract.md
app/: build.gradle.kts
app/schemas/io.github.summerdez.asmrplayer.AsrmDatabase/: 1.json  2.json  3.json  4.json
app/schemas/io.github.summerdez.asmrplayer.data.AsrmDatabase/: 5.json  6.json
app/src/androidTest/java/io/github/summerdez/asmrplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  asrm_whisper_jni.cpp
app/src/main/cpp/cmake/spirv-headers/: SPIRV-HeadersConfig.cmake
app/src/main/res/drawable/: ic_chevron_down.xml  ic_chevron_right.xml  ic_close.xml  ic_equalizer.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_lock.xml  ic_moon.xml  ic_more_vertical.xml  ic_music_note.xml  ic_notification.xml  ic_pause.xml  ic_play.xml  ic_queue.xml  ic_settings.xml  ic_skip_next.xml  ic_skip_previous.xml  ic_stop.xml  ic_subtitles.xml  ic_subtitles_off.xml  ic_user.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/io/github/summerdez/asmrplayer/: AiSubtitlePipelineTest.kt  AppThemeModeTest.kt  AppUpdateDownloadStateTest.kt  AppUpdateRepositoryTest.kt  DbIoTest.kt  DlsiteContentTest.kt  (+26 more)
app/src/uiProbe/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: ui-probe.sh
(+203 files in other folders)
